package seedu.clinic.model.person;

import java.util.Objects;
import java.util.Set;

import seedu.clinic.commons.util.ToStringBuilder;
import seedu.clinic.model.tag.Tag;

/**
 * Represents a Pharmacist in the clinic.
 * A Pharmacist is a Person who dispenses and manages prescriptions.
 *
 * TODO: Make Pharmacist extend Staff instead of Person once Staff hierarchy is implemented
 * TODO: Implement prescription dispensing logic
 * TODO: Implement prescription management logic
 * TODO: Add patient history retrieval functionality
 */
public class Pharmacist extends Person {

    /**
     * Constructs a Pharmacist with the given details.
     * Every field must be present and not null.
     */
    public Pharmacist(Name name, Phone phone, Email email, Address address, Set<Tag> tags) {
        super(name, phone, email, address, tags);
    }

    /**
     * Constructs a Pharmacist with the given details including ID.
     */
    public Pharmacist(Name name, Phone phone, Email email, Address address, Set<Tag> tags, int id) {
        super(name, phone, email, address, tags, id);
    }

    /**
     * Updates a prescription.
     */
    public void updatePrescription(Prescription oldPrescription, Prescription newPrescription) {
        // TODO: Implement prescription update logic
        // TODO: Update prescription in system
        // TODO: Track prescription modifications
    }

    /**
     * Dispenses a prescription to a patient.
     */
    public void dispensePrescription(Prescription prescription) {
        // TODO: Implement prescription dispensing logic
        // TODO: Mark prescription as fulfilled
        // TODO: Update patient medication records
        // TODO: Generate dispensing records
    }

    /**
     * Views the medical history of a patient.
     */
    public void viewPatientHistory(Patient patient) {
        // TODO: Implement patient history retrieval for pharmacist
        // TODO: Fetch patient's active prescriptions
        // TODO: Fetch patient's allergies
        // TODO: Fetch medication history
    }

    @Override
    public boolean equals(Object other) {
        if (other == this) {
            return true;
        }

        if (!(other instanceof Pharmacist)) {
            return false;
        }

        return super.equals(other);
    }

    @Override
    public int hashCode() {
        return Objects.hash(super.hashCode());
    }

    @Override
    public String toString() {
        return new ToStringBuilder(this)
                .add("name", getName())
                .add("id", getId())
                .add("phone", getPhone())
                .add("email", getEmail())
                .add("address", getAddress())
                .add("tags", getTags())
                .toString();
    }
}
